data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_725.wast
;; 6. **Test Description:**    Implement a `br_if` within a `loop` with a complex boolean condition using `&&` and `||`. Verify the `br_if` correctly handles all boolean logic paths and branches appropriately.    - **Constraint Checked:** Handling complex boolean conditions within `br_if` inside loops.    - **Relation to Incorrect Condition Evaluation:** Avoid incorrect branching by improper evaluation of boolean conditions.

(assert_invalid
  (module
    (func $complex-boolean-condition-with-br_if
      (block (loop
        (if (i32.and (i32.or (i32.const 1) (i32.const 0)) (i32.const 1))
          (br_if 0 (i32.const 1))
        )
      ))
    )
  )
  "type mismatch"
)